sync-wave-transformers/namespace-syncwave.yaml
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: namespace-syncwave
patch: |-
  apiVersion: v1
  kind: Namespace
  metadata:
    name: "*"
    annotations:
      argocd.argoproj.io/sync-wave: "0"
target:
  kind: Namespace
