sync-wave-transformers/statefulset-syncwave.yaml
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: statefulset-syncwave
patch: |-
  apiVersion: apps/v1
  kind: StatefulSet
  metadata:
    name: "*"
    annotations:
      argocd.argoproj.io/sync-wave: "9"
target:
  kind: StatefulSet
