sync-wave-transformers/endpoints-syncwave.yaml
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: endpoints-syncwave
patch: |-
  apiVersion: v1
  kind: Endpoints
  metadata:
    name: "*"
    annotations:
      argocd.argoproj.io/sync-wave: "7"
target:
  kind: Endpoints
