sync-wave-transformers/service-syncwave.yaml
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: service-syncwave
patch: |-
  apiVersion: v1
  kind: Service
  metadata:
    name: "*"
    annotations:
      argocd.argoproj.io/sync-wave: "8"
target:
  kind: Service
