sync-wave-transformers/networkpolicy-syncwave.yaml
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: networkpolicy-syncwave
patch: |-
  apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: "*"
    annotations:
      argocd.argoproj.io/sync-wave: "4"
target:
  kind: NetworkPolicy
