sync-wave-transformers/validatingwebhookconfiguration-syncwave.yaml
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: validatingwebhookconfiguration-syncwave
patch: |-
  apiVersion: admissionregistration.k8s.io/v1
  kind: ValidatingWebhookConfiguration
  metadata:
    name: "*"
    annotations:
      argocd.argoproj.io/sync-wave: "10"
target:
  kind: ValidatingWebhookConfiguration
